--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "node utils/build.js",
     "start": "node utils/webserver.js",
-    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
+    "puppeteer": "node puppeteer/web.mjs"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.2",
@@ -26,6 +27,7 @@
     "@types/chrome": "^0.0.177",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
     "babel-preset-react-app": "^10.0.1",
@@ -44,10 +46,14 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^6.0.1",
+    "postcss": "^8.4.6",
+    "postcss-loader": "^6.2.1",
     "prettier": "^2.5.1",
+    "puppeteer": "^13.4.0",
     "sass-loader": "^12.4.0",
     "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.23",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
