--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,9 +2,6 @@
   "manifest_version": 3,
   "name": "Membean Destroyer",
   "description": "A chrome extension to destroy Membean",
-  "background": {
-    "service_worker": "background.bundle.js"
-  },
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
@@ -19,9 +16,6 @@
       ],
       "js": [
         "contentScript.bundle.js"
-      ],
-      "css": [
-        "content.styles.css"
       ]
     }
   ],
@@ -32,7 +26,13 @@
         "icon-128.png",
         "icon-34.png"
       ],
-      "matches": []
+      "matches": [
+        "https://membean.com/*"
+      ]
     }
+  ],
+  "permissions": [
+    "tabs",
+    "storage"
   ]
 }
